--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -50,6 +50,9 @@ Found a ridiclous bug with counting the total cycles executed in the 6502 core. 
 Cleaned up and removed dead code from cpu_control.h, trying to narrow down requirements for said rewrite.
 
 2/5/24
-Major Rewrite phase 1. Consolidated DVG code, moved everything to the mame timing code, added mostly cycle accurate timing to most drivers. 
+Major Rewrite phase 1. Consolidated DVG code, moved everything to the mame style cpu/timing code, added mostly cycle accurate timing to most drivers. 
 Started adding code to forklift to a complete newer core codeset. 
+
+2/6
+Fixed DVG issues. Fixed remaining watchdog issues. Hacked back in pause function.
 
