--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -138,6 +138,11 @@ Now all code releases from this point will be a 64 bit build. This was my bigges
 4/27/25
 Cleaned up and rewrote the quantum driver. Completed the 68000 integration and wrote handler code like the rest of the cpu's and added it in. Ready to write and add a Aztarac driver now.  
 
+5/2/25
+Biggest re-write of the vector code to date. Completely rewrote the Atari AVG code, finished cleanup of the 68000 code, fixes to sound and video in all cinematronics games, fixed audio in Lunar Lander and Battlezone. Added skeleton Aztarac driver. Added vector clipping, removed the bezels from the vertical games, improving the video quality. Changed the color vector rendering, should be a slight improvement. 
+Fixed volume handling in my mixer code. 
+
+
 
 
 
