--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -209,6 +209,12 @@ Fixed code crashing on Windows 7 when running without command line options.
 6/30/25
 Minor 6502 and z80 fixes, all documented functions should finally be emulated correctly. I don't know how I can keep doing optimizations and my 6502 code is about 20% slower.
 Removed more old code.Gui and old font code are gone. Removed all traces of gamenum[0] which was the gui. 
+
+7/26/25
+Live gets in the way sometime, but a major revamp of the win32 code coming soon. Removed the last bit of depricated opengl code with the tetrect.cpp code., moved it to a shader. Minor work on texturing but really prepping for a major code change, coming soonish.
+
+
+
  
 
  
