--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -219,6 +219,11 @@ Added ALT-TAB switching from window to fullscreen. Reorganized the game code and
 
 8/1/25 In an effort to speed up the code as much as possible, I moved all audio and input processing to their own threads. Does it make a difference? I'm still running tests but it looks good so far. Also cleaned up a bit of the mixer code. 
 
+8/2/25 Fixed the most important part of the graphics code, the PAUSED screen. :)
+Finally defaulted the Coin in and START 1 and Start 2 to Xbox controls, eventually I'll make that configurable.LSB and RSB for Coin, MENU and VEIW to start.  Your config files will need to be deleted to get the updates.
+
+8/3/25 Replaced the depricated code in render_blur_image_fbo3()
+
 
 
 
