--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -248,6 +248,8 @@ Added an non-mame oki6295 adpcm chip emulation after 7 iterations and 2 complete
 Temporarily reinstated the depricated code in render_blur_image_fbo3() to help with the asteroids texture issue. 
 Expect the graphics overhaul to add correct scaling and rotation, as well as a new set of menu options for maximum number of knobs to tune for  every graphics piece. 
 9/8/25 Finished the CPU code cutover to MAME style, still cleaning up.
+9/9/25 Corrected Tempest Menu (Clay Cowgill)
+
 
 
 
